# budget-manager

./: .env_example  LICENSE  README.md  main.py  pyproject.toml
api/v1/budget/: models.py  schemas.py  utils.py  views.py
api/v1/users/: models.py  schemas.py  views.py
bot/: bot.py
bot/handlers/: users.py
core/: database.py  loggers.py  settings.py
